Fixed navbar overflow which caused horizontal sccrolling.

--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body{
 }
 .navbar {
 	max-height: 50px;
-	padding: 25px;
+	padding-top: 25px;
+	padding-bottom: 25px;
 	top: 0;
 	left: 0;
 	display: inline-block;
@@ -60,7 +61,7 @@ body{
 }
 .logo {
 	height: inherit;
-	margin-left:25px;
+	margin-left: 50px;
 	float: left;
 }
 .navbar-right{
@@ -79,6 +80,7 @@ body{
 	margin-bottom: 23px;
 	position: relative;
 	top: 25px;
+	left: 25px;
 	float: left;
 }
 .upload-button {
